Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76204

[REG 5.12.3 -> 5.13.0] Excessive qdoc logging breaks builds

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.13.0
    • 5.13.0 RC 1
    • Build tools: qdoc
    • None

    Description

      When building Qt Creator with documentation, qdoc logs millions of lines like this:

      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/coreplugin/dialogs
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/coreplugin
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/debugger/namedemangler
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/debugger
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/debugger/console
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/coreplugin/actionmanager
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/texteditor/codeassist
      [ 9138s] LOG: -I/home/abuild/rpmbuild/BUILD/qt-creator-opensource-src-4.9.0/src/plugins/coreplugin/locator

      As a result, the build time is unusuably slow and our build system actually terminates the job due to the massive output. The cause seems to be commit c4d02e5cea9f8657bd74f1f724d048de5c0142b1 ("qdoc: Let qdoc print better log messages").

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              gbk Martin Smith (Qt)
              vogtinator Fabian Vogt
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes